--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+<!--    defined colors-->
+    <color name="maniPage_back">#FFE817</color>
+    <color name="buttonColor">#B7C2BB</color>
 </resources>
