--- a/app/src/main/res/layout/file_list_item.xml
+++ b/app/src/main/res/layout/file_list_item.xml
@@ -8,8 +8,8 @@
 
     <ImageView
         android:id="@+id/icon_view"
-        android:layout_width="38dp"
-        android:layout_height="38dp"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
         android:src="@drawable/ic_baseline_folder_24"
         tools:ignore="ContentDescription" />
 
@@ -18,14 +18,26 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_toEndOf="@id/icon_view"
-        android:padding="10dp"
+        android:padding="4dp"
         android:text="@string/documents_sample_str"
         android:textColor="@color/black" />
 
+    <TextView
+        android:id="@+id/file_time_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/file_name_text_view"
+        android:layout_alignStart="@+id/file_name_text_view"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="0dp"
+        android:text="@string/documents_sample_str"
+        android:textColor="@color/black"
+        android:textSize="10sp" />
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_below="@id/file_name_text_view"
+        android:layout_height="0.7dp"
+        android:layout_below="@id/file_time_text_view"
         android:layout_marginTop="2dp"
         android:background="@color/cardview_shadow_start_color" />
 
